Fixed another overlap

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -57,3 +57,7 @@ textarea,
 	width: 40%;
 	word-break: break-all;
 }
+
+.selected-query-terms {
+	word-break: break-all;
+}
